# edjc

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  INSTALL.md  LICENSE  PROJECT_SUMMARY.md  README.md  build.rs  edjc.toml.example
.github/: copilot-instructions.md
.github/workflows/: ci.yml
src/: config.rs  edsm.rs  hexchat.rs  inara.rs  jump_calculator.rs  lib.rs  types.rs
